# bdsephexercise

./: .gitignore
kpkv/: KP_E2.m  Kepler.cpp  Kepler.h  Soordinate.cpp  Soordinate.h  cpp.txt  kpkv.cbp  kpkv.depend  kpkv.layout  main.cpp  matlab.txt
libbdssvpos/: .gitignore  CMakeLists.txt  README.md
libbdssvpos/cmake/: Toolchain-gcc-arm-linux.cmake
libbdssvpos/include/libbdssvpos/: bdssvpos.h  kepler.h
libbdssvpos/src/: CMakeLists.txt  bdssvpos.cpp  kepler.cpp
libbdssvpos/test/: CMakeLists.txt  check_main.cpp  check_position.cpp  check_suites.h
logs/: KP_ZherebtsovIS_ER-15-16_ApSRNS_v1.1.docx
processing/: KP_Part1_PopovMG.docx  README.md  КП_Этап_1_Тасканов В.Е.docx  Отчет этап 1 Левашов Эр-15-16.docx
simulation/: Etap2.m  KP1.m  README.md  gprof.txt  stage2.txt  этап2.m
simulation/DetermSatPosition/: Kepler.cpp  Kepler.h  LP2.cbp  Test.cpp  ephemerids.cpp  ephemerids.h  funct.cpp  funct.h  gmon.sum  main.cpp
simulation/Dr.Memory/: potential_errors.txt  results.txt  suppress.txt
